--- a/ProjetWeb/Styles/style.css
+++ b/ProjetWeb/Styles/style.css
@@ -1,5 +1,5 @@
 body{
-    /* background-image: url("../assets/wallpaper.png"); */
+    
     margin: 0;
 
     
@@ -23,7 +23,7 @@ body{
     position: fixed;
     bottom: 35px;
     left: 20px;
-    z-index: 999; /* Assurez-vous que l'élément est au-dessus du contenu */
+    z-index: 100; /* Assurez-vous que l'élément est au-dessus du contenu */
   }
   
   .traveler {
@@ -102,34 +102,66 @@ body{
     height: 150px;
     width: 150px;
 
-    position: relative;
+    position: absolute;
 
     top : 68%;
-    left : 70%;
+    left: 10%;
 }
 
 .RulesPanneauDroit{
     height: 150px;
     width: 150px;
 
-    position: relative;
+    position: absolute;
 
-    top : 64%;
-    left : 70%;
-}
+    top : 70%;
+    left : 47%;
+    }
 
 .PlaneRules{
     height: 200px;
-    position: relative;
-    left: 15%;
+    position: absolute;
+    left: 30%;
 
 }
 
 .RulesIndication{
-    position: relative;
-    left: -475px;
+    position: absolute;
+    left: 10%;
     top: -155px;
     font-weight: bold;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.ruleSign{
+    width: 320px;
+    height: 310px;
+    position: absolute;
+    left: -2000px;
+    
+}
+
+.ruless{
+    position: absolute;
+    top : 50%;
+    left: 60%;
+}
+
+
+
+.regle{
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.catDodo{
+    width: 180;
+    height: 180;
+    background-image: url("/assets/catRompiche.png");
+    background-repeat: no-repeat;
+   
+    top : 50%;
+    
 }
