--- a/ProjetWeb/Styles/style.css
+++ b/ProjetWeb/Styles/style.css
@@ -1,182 +1,92 @@
+
+
 body{
-    
-    margin: 0;
-
-    
-
-} 
-    
-
-
-
-
-
-
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10px;
 }
 
-.traveler-container {
-    position: fixed;
-    bottom: 35px;
-    left: 20px;
-    z-index: 100; /* Assurez-vous que l'élément est au-dessus du contenu */
+
+
+
+
+nav {
+    width:auto;
+    height:auto;
+    position:relative;
+    border:solid 1px black;
+    margin:25px 0;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
   }
   
-  .traveler {
-    height: 270px;
-    width: 184px;
-    background-image: url("../assets/walking.png");
-    background-repeat: no-repeat;
-    background-position: 0 0; /* Position initiale */
+  ul, li {
+    list-style-type:none;
   }
   
-  .walking {
-    animation: walk 0.6s steps(5) infinite;
-  }
-  
-  @keyframes walk {
-    0% {
-      background-position: 0 0;
-    }
-    100% {
-      background-position: -920px 0;
-    }
+  li {
+    width:auto;
+    margin:0 25px;
   }
 
+  ul {
+    display:inline-flex;
+    justify-content:flex-end;
+  }
 
-
-.page{
-    width: 100vw;
-    height: 100vh;
-}
-
-.container{
-    display: flex;
-    flex-direction: row;
-    width: 400vw;
-    transform: rotate(90deg) translateY(-100vh);
-    transform-origin: top left;
-}
-
-.first{
-    background-image: url("../assets/wallpaper.png");
-}
-
-.rules{
-    background-image: url("../assets/wallpaper.png");
-}
-
-.play{
-    background-image: url("../assets/wallpaper.png");
-}
-
-.resultat{
-    background-image: url("../assets/wallpaper.png");
-}
-.wayToRule{
-    background-image: url("../assets/wallpaper.png");
-}
-
-.out-wrapper{
-    width: 100vh;
-    height: 100vw;
-    transform: rotate(-90deg) translateX(-100vh);
-    transform-origin: top left;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    position: absolute;
-    scrollbar-width: none;
-    /* -ms-overflow-style: none; */
-   
-}
-
-/* ::-webkit-scrollbar{
-    display: none;
-} */
-
-.firstPanneauDroit{
-    height: 150px;
-    width: 150px;
-
-    position: absolute;
-
-    top : 68%;
-    left: 10%;
-}
-
-.RulesPanneauDroit{
-    height: 150px;
-    width: 150px;
-
-    position: absolute;
-
-    top : 70%;
-    left : 40%;
-    }
-
-.PlaneRules{
-    height: 200px;
-    position: absolute;
-    left: 30%;
-
-}
-
-.RulesIndication{
-    position: absolute;
-    left: 20%;
-    top: -155px;
-    font-weight: bold;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.ruleSign{
-    width: 320px;
-    height: 310px;
-    position: absolute;
-    right: 20%;
-    
-}
-
-.ruless{
-    position: absolute;
-    top : 50%;
-    left: 60%;
-}
-
-
-
-.regle{
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: 25px;
-}
-
-
-
-.Trophy{
-    position: absolute;
-    bottom: 7%;
-}
-
-
-.tipsTrophy{
-
+  .logo{
     height: 100px;
     width: 100px;
+  }
 
-}
 
-.rocket{
-    height: 175px;
-    width: 175px;
+  .MainContent{
+    display: flex;
+    flex-direction : column;
+    align-items: center;
+    /* justify-content: center; */
+   
+    margin-top: 50px;
     position: absolute;
-    top:66%;
-    left: 60%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 500px;
+    width: 70%;
+    border: 1px solid #000;
+  }
 
+
+  .Flag{
+    height: 130px;
+    width: 200px;
+    position: relative;
+    top:50%;
+  }
+
+
+  .formContent{
+    position: relative;
+    top : 30%;
+  }
+
+  .NextQuestion{
+    position: relative;
+    top : 40%;
+  }
+
+  table, td, th {
+    border: 1px solid #333;
+    text-align: center;
+    }
+    thead, tfoot {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    }
+
+
+
+.ResultatTab{
+    position: relative;
+    top : 10%;
 }
-
