--- a/ProjetWeb/Styles/styleJoue.css
+++ b/ProjetWeb/Styles/styleJoue.css
@@ -41,21 +41,16 @@ nav {
   }
 
 
-  .MainContent{
+  .MainContent {
     display: flex;
-    flex-direction : column;
+    flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-   
     margin-top: 50px;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     height: 500px;
     width: 70%;
     border: 1px solid #000;
-    
+    margin-left: auto; 
+  margin-right: auto;
   }
 
 
@@ -64,6 +59,7 @@ nav {
     width: 200px;
     position: relative;
     top:50%;
+    border: 2px solid darkblue;
   }
 
 
@@ -110,3 +106,19 @@ nav {
         width:200px;
         box-shadow:1px 1px 2px #868686 inset;
         }
+
+
+        .tableauReponse {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px; 
+          }
+
+
+          h2{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: red;
+          }
